# python-bizli

./: .coveragerc  .gitignore  Makefile  README.md  README.rst  docker-compose.yml  pyproject.toml
.github/workflows/: python-package.yml  test-bizli.yml
bizli/: __init__.py  bizli.py  db.py
bizli/template/: env.py
tests/: conftest.py  settings.py  test_bizli.py
