[tool.poetry]
name = "bizli"
version = "0.1.0"
description = ""
license = "MIT"
authors = ["Shimul Chowdhury <shimul@opencraft.com>"]


[tool.poetry.scripts]
bizli = 'bizli:main'

[tool.poetry.dependencies]
python = "^3.6"
typer = "^0.3.2"
psycopg2-binary = "^2.8.6"
mako = "^1.1.3"
tqdm = "^4.50.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^3.8.4"
isort = "^5.5.4"
importlib_metadata = "^2.0.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
